--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,9 @@ plugins {
 }
 
 repositories {
-    jcenter()
     //mavenLocal()
     mavenCentral()
+    maven { url "https://maven.shedaniel.me/" }
     maven { url "https://maven.terraformersmc.com/releases" }
     maven {
         name = 'TerraformersMC Archive'
@@ -31,11 +31,9 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    modApi("me.shedaniel.cloth:config-2:5.0.0") {
+    // Cloth Config (including Auto Config)
+    modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
         exclude(group: "net.fabricmc.fabric-api")
-    }
-
-    modApi("me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}") {
     }
 
     modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
@@ -67,10 +65,8 @@ tasks.withType(JavaCompile).configureEach {
 // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
 // if it is present.
 // If you remove this task, sources will not be generated.
-task sourcesJar(type: Jar, dependsOn: classes) {
-    //noinspection GrDeprecatedAPIUsage
-    classifier = "sources"
-    from sourceSets.main.allSource
+java {
+    withSourcesJar()
 }
 
 jar {
