--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version=1.17.1
 yarn_mappings=1.17.1+build.10
 loader_version=0.11.6
 # Mod Properties
-mod_version=2.0.0
+mod_version=2.0.serverfix
 maven_group=com.soniether
 archives_base_name=soundphysics
 # Dependencies
