Update to 1.18; added obfuscation hint

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,15 +2,15 @@
 org.gradle.jvmargs=-Xmx4G
 # Fabric Properties
 # check this on https://fabricmc.net/versions.html
-minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.10
-loader_version=0.11.6
+minecraft_version=1.18
+yarn_mappings=1.18+build.1
+loader_version=0.12.5
 # Mod Properties
-mod_version=2.0.serverfix
+mod_version=3.0
 maven_group=com.soniether
 archives_base_name=soundphysics
 # Dependencies
 # check this on https://fabricmc.net/versions.html
-fabric_version=0.36.1+1.17
-cloth_config_version=5.0.34
-mod_menu_version=2.0.2
+fabric_version=0.43.1+1.18
+cloth_config_version=6.0.42
+mod_menu_version=3.0.0
