--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version=1.18
 yarn_mappings=1.18+build.1
 loader_version=0.12.5
 # Mod Properties
-mod_version=0.4.2-pre1
+mod_version=0.4.2
 maven_group=com.soniether
 archives_base_name=soundphysics
 # Dependencies
