BlockState downpass in hitResult -> -40% time

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,15 +2,17 @@
 org.gradle.jvmargs=-Xmx4G
 # Fabric Properties
 # check this on https://fabricmc.net/versions.html
-minecraft_version=1.18
-yarn_mappings=1.18+build.1
-loader_version=0.12.5
+minecraft_version=1.18.1
+yarn_mappings=1.18.1+build.2
+loader_version=0.12.11
 # Mod Properties
-mod_version=0.5.0-pre
+mod_version=0.5.0-pre2
 maven_group=com.soniether
 archives_base_name=soundphysics
 # Dependencies
 # check this on https://fabricmc.net/versions.html
-fabric_version=0.43.1+1.18
-cloth_config_version=6.0.42
+fabric_version=0.44.0+1.18
+# https://www.curseforge.com/minecraft/mc-mods/cloth-config/files
+cloth_config_version=6.1.48
+# https://www.curseforge.com/minecraft/mc-mods/modmenu/files
 mod_menu_version=3.0.0
