--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version=1.18.1
 yarn_mappings=1.18.1+build.2
 loader_version=0.12.11
 # Mod Properties
-mod_version=0.5.0-pre2
+mod_version=0.5.0
 maven_group=com.soniether
 archives_base_name=soundphysics
 # Dependencies
